make dataset considering window size

--- a/nagasawa/mecab_bert_token_test.ipynb
+++ b/nagasawa/mecab_bert_token_test.ipynb
@@ -4854,9 +4854,9 @@
     "\t\tdel tokens[0]   # [CLS]を削除\n",
     "\t\tsep_idx = tokens.index('[SEP]') # [SEP]のindexを取得\n",
     "\t\tdel tokens[sep_idx:]    # [SEP]以降を削除\n",
-    "\t\ttokens_in_tagger_idx = concat_subwords(tokens)\n",
+    "\t\ttokens_idx_list_no_subword = concat_subwords(tokens)\n",
     "\t\tprint(tagger_w.parse(line))\n",
-    "\t\tfor token_idx_list in tokens_in_tagger_idx:\n",
+    "\t\tfor token_idx_list in tokens_idx_list_no_subword:\n",
     "\t\t\tfor token_idx in token_idx_list:\n",
     "\t\t\t\tprint(tokens[token_idx], end=',')\n",
     "\t\t\tprint('/', end=' ')\n",
