--- a/nagasawa/mecab_test.ipynb
+++ b/nagasawa/mecab_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,39 +17,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['今日\\t名詞,副詞可能,*,*,*,*,今日,キョウ,キョー', 'も\\t助詞,係助詞,*,*,*,*,も,モ,モ', 'マシンラーニング\\t名詞,一般,*,*,*,*,*', 'を\\t助詞,格助詞,一般,*,*,*,を,ヲ,ヲ', '勉強\\t名詞,サ変接続,*,*,*,*,勉強,ベンキョウ,ベンキョー', 'し\\t動詞,自立,*,*,サ変・スル,連用形,する,シ,シ', 'ます\\t助動詞,*,*,*,特殊・マス,基本形,ます,マス,マス', '。\\t記号,句点,*,*,*,*,。,。,。', 'EOS', '']\n"
+      "['今日\\t名詞,副詞可能,*,*,*,*,今日,キョウ,キョー', 'も\\t助詞,係助詞,*,*,*,*,も,モ,モ', 'いい\\t形容詞,自立,*,*,形容詞・イイ,基本形,いい,イイ,イイ', '天気\\t名詞,一般,*,*,*,*,天気,テンキ,テンキ', 'だっ\\t助動詞,*,*,*,特殊・ダ,連用タ接続,だ,ダッ,ダッ', 'た\\t助動詞,*,*,*,特殊・タ,基本形,た,タ,タ', '。\\t記号,句点,*,*,*,*,。,。,。', 'EOS', '']\n",
+      "9\n"
      ]
     }
    ],
    "source": [
     "text = input(\"テキストを入力\")\n",
     "taggers = tagger.parse(text).split(\"\\n\")\n",
-    "print(taggers)"
+    "print(taggers)\n",
+    "print(len(taggers))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['今日', 'も', 'マシン', '##ラー', '##ニング', 'を', '勉強', 'し', 'ます', '。']\n"
+      "['悲', '##しかっ']\n"
      ]
     }
    ],
    "source": [
     "tokens = tokenizer.tokenize(text)\n",
     "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "悲しい\n"
+     ]
+    }
+   ],
+   "source": [
+    "from my_module.tools import get_genkei\n",
+    "print(get_genkei(text, tagger))"
    ]
   },
   {
